micro-services/deployment/nginx-ingress/popularity-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: popularity-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: popularity
  template:
    metadata:
      labels:
        app: popularity
    spec:
      containers:
      - name: popularity
        image: gcr.io/neeraj-arena/popularity
        ports:
        - containerPort: 80

---
kind: Service
apiVersion: v1
metadata:
  name: popularity
spec:
  selector:
    app: popularity
  ports:
  - protocol: TCP
    port: 80
  type: ClusterIP
