micro-services/deployment/nginx-ingress/ingress-deployment.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: neeraj-nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /movie-details
        backend:
          serviceName: movie-details
          servicePort: 80
      - path: /budget
        backend:
          serviceName: budget
          servicePort: 80
      - path: /revenues
        backend:
          serviceName: revenues
          servicePort: 80
      - path: /popularity
        backend:
          serviceName: popularity
          servicePort: 80        
      - path: /ratings
        backend:
          serviceName: ratings
          servicePort: 80
      - path: /predictions
        backend:
          serviceName: predictions
          servicePort: 80
